# simple_compiler

./: CMakeLists.txt  compilada.csv  compilada_1.csv
gram/: gram_v0.txt  v1.txt
src/: alexical_an.cpp  alexical_an.hpp  main.cpp  syntactical_an.cpp  syntactical_an.hpp
test_codes/: test_code.lang  test_code_2.lang
